Fixed bug #24177 (Status not set correctly after flush() in Apache 2)