sapi/apache2filter/sapi_apache2.c
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: sapi_apache2.c,v 1.117 2003/08/01 20:20:11 iliaa Exp $ */
+/* $Id: sapi_apache2.c,v 1.118 2003/08/02 18:29:30 iliaa Exp $ */
 
 #include <fcntl.h>
 
@@ -241,7 +241,9 @@ php_apache_sapi_flush(void *server_context)
 	 * then don't bother flushing. */
 	if (!server_context)
 		return;
-    
+
+	ctx->r->status = SG(sapi_headers).http_response_code;
+
 	f = ctx->f;
 
 	/* Send a flush bucket down the filter chain. The current default
